# administrate-performance

./: .gitignore  README.md
manual-scheduler/: .graphqlconfig  README.md  graphql-schema.json  main.py  pyproject.toml
manual-scheduler/data/: api_client.py  small.py  traverse.py
manual-scheduler/graphql/: addAccount.graphql  addContact.graphql  addInstructorsToPlan.graphql  addLocation.graphql  addPlan.graphql  addRegion.graphql  addResource.graphql  addResourcesToPlan.graphql  fragments.graphql  getAllAccounts.graphql  getAllCompanies.graphql  getAllContacts.graphql  getAllCountries.graphql  getAllCourseTemplates.graphql  getAllInstructors.graphql  getAllPlans.graphql  getAllPlansSimple.graphql  getAllRegions.graphql  getAllResourceTypes.graphql  getAllResources.graphql  getOneResourceType.graphql  getPlansList.graphql  loader.py
manual-scheduler/graphql/fragments/: contactDetails.graphql  locationDetails.graphql  planDetails.graphql  resourceDetails.graphql  scheduleBoundsDetails.graphql  sessionNeedDetails.graphql  statusDetails.graphql
manual-scheduler/models/: event_need.py  instructor.py  location.py  plan.py  resource.py  session_need.py
python-profiling/: .gitignore  Makefile  README.md  generate_report.py  local_logger.py  multi_timer.py  profile_decorator.py  pyproject.toml  python-profiling-talk.ipynb  report.out  sorting.py
python-profiling/python_profiling/: multi_timer.py  profile_decorator.py  sorting.py  trace_decorator.py
python-profiling/tests/: test_multi_timer.py
