[tool.poetry]
name = "manual-scheduler"
version = "0.1.0"
description = ""
authors = ["Tom Nurkkala <tbn@administrate.co>"]
readme = "README.md"
packages = [{include = "manual_scheduler"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
devtools = {extras = ["pygments"], version = "^0.10.0"}
faker = "^18.3.2"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
