[tool.poetry]
name = "manual-scheduler"
version = "0.1.0"
description = "Test data for manual scheduler"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "manual_scheduler"}]

[tool.poetry.dependencies]
python = "^3.11"
devtools = "^0.11.0"
pydantic = "^1.10.7"
faker = "^18.4.0"
httpx = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
