[tool.poetry]
name = "python-profiling"
version = "0.1.0"
description = "Simple Python profiling tools"
authors = ["Tom Nurkkala <tbn@administrate.co>"]
readme = "README.md"
packages = [{include = "python_profiling"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}
pytest = "^7.3.1"
coverage = "^7.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
